syntax = "proto3";

package greet;
option go_package = "greet/greetpb;greetpbgen";

message Greeting {
    string  first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;

}

message GreetResponse {
    string result = 1;
}


// ! protip: anytime we have a new rpc, it is adviced to have new messgae to satisfy them

message GreetManyTimesRequest{
    Greeting greeting = 1;
}
message GreetManyTimesResponse{
    string result = 1;
}

message LongGreetRequest{
    Greeting greeting =1;

}

message LongGreetResponse{
    string result =1;
}

message GreetEveryoneRequest{
    Greeting greeting=1;
}

message GreetEveryoneResponse{
    string result=1;
}


service GreetService{
    // unary
    rpc Greet(GreetRequest) returns (GreetResponse){};

    // Server streaming 
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){}

    //  client streaming 
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){}

    // Bi direction streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){}
}